--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,5 @@ platform = espressif32
 board = esp-wrover-kit
 framework = arduino
 lib_deps = mikem/RadioHead@^1.120
+upload_port = /dev/cu.usbserial-2
+monitor_speed = 115200
